# observer

./: CLAUDE.md  TODO.md  example.yaml  generate_schema.sh  json_from_schema.sh  observer.sh  pyproject.toml  schema.json  schema.yaml  schema_from_example.sh
src/observer/: __init__.py  ai.py  capture.py  database.py  main.py  models.py
